<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

<LinearLayout
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/photo_size_thumb"
        android:layout_height="@dimen/photo_size_thumb"
        android:src="@drawable/baseline_self_improvement_24"
        android:importantForAccessibility="no"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:helperText="@string/helper_required"
        app:endIconMode="clear_text"
        app:counterMaxLength="@integer/counter_max_email"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="@integer/counter_max_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        app:helperText="@string/helper_required"
        app:endIconMode="password_toggle"
        app:counterMaxLength="@integer/counter_max_password"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/counter_max_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_btn_Login"
        android:layout_marginTop="@dimen/common_padding_min"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_btn_signUp"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Inicia sesión con"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSplash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_btn_Login_Google"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            />

<!--        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:text="@string/card_btn_Login_Facebook"
            app:icon="@drawable/ic_facebook"
            android:backgroundTint="@color/fui_bgFacebook" />-->

    </LinearLayout>






</LinearLayout>

</androidx.core.widget.NestedScrollView>